Fixed Bugs and added error page.

--- a/Backend/login/loginapp/static/css/Dashboard.css
+++ b/Backend/login/loginapp/static/css/Dashboard.css
@@ -51,16 +51,18 @@ body{
 }
 
 .nav-link:hover{
-	background: #7579e7;
+	background: grey;
 }
 
 .text-primary{
-	color: #7579e7 !important;
+	color: grey !important;
 }
 
 .toggle{
 	color: white;
 }
+
+
 
 .addButton{
 	background-color: #F64C72;
