--- a/Backend/login/loginapp/static/css/style.css
+++ b/Backend/login/loginapp/static/css/style.css
@@ -82,6 +82,10 @@
 	border-radius: 50%;
 	font-size: 15px !important;
 }
+.businessNews{
+	width: 17rem;
+	height: auto;
+}
 @media (max-width: 1024px){
 	.image{
 		width: 600px;
@@ -91,15 +95,36 @@
 		width: 300px;
 		height: 200px;
 	}
+	.businessNews{
+		width: 17rem;
+		height: auto;
+		/* display: block;
+		margin-left: auto;
+		margin-right: auto; */
+	}
 }
 @media (max-width: 768px){
+	.image{
+		width: 680px;
+		height: 500px;
+	}
 	.image1{
-		width: 600px;
+		width: 680px;
 		height:300px;
 		margin-left: 10px;
 	}
 	.title{
 		margin-left: 10px;
+	}
+	.search{
+		display: none;
+	}
+	.businessNews{
+		width: 41rem;
+		height: auto;
+		/* display: block;
+		margin-left: auto;
+		margin-right: auto; */
 	}
 }
 @media (max-width: 540px){
@@ -111,6 +136,13 @@
 		width: 500px;
 		height:300px;
 	}
+	.businessNews{
+		width: 17rem;
+		height: auto;
+		/* display: block;
+		margin-left: auto;
+		margin-right: auto; */
+	}
 }
 @media (max-width: 414px){
 	.image{
@@ -121,14 +153,38 @@
 		width: 350px;
 		height: 200px;
 	}
+	.businessNews{
+		width: 17rem;
+		height: auto;
+		/* display: block;
+		margin-left: auto;
+		margin-right: auto; */
+	}
 }
 @media (max-width: 360px){
 	.image{
-		width: 300px;
+		width: 320px;
 		height: 200px;
 	}
 	.image1{
 		width: 320px;
+		height: 200px;
+	}
+	.businessNews{
+		width: 17rem;
+		height: auto;
+		/* display: block;
+		margin-left: auto;
+		margin-right: auto; */
+	}
+}
+@media (max-width: 320px){
+	.image{
+		width: 290px;
+		height: 200px;
+	}
+	.image1{
+		width: 295px;
 		height: 200px;
 	}
 }
@@ -143,5 +199,12 @@
 	}
 	.title{
 		font-size: 15px;
+	}
+	.businessNews{
+		width: 14rem;
+		height: auto;
+		/* display: block;
+		margin-left: auto;
+		margin-right: auto; */
 	}
 }
