--- a/Backend/login/loginapp/templates/loginapp/Html file/Business.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Business.html
@@ -98,17 +98,19 @@
                 Logout
               </button>
             </a>
-            <form class="d-flex">
-              <input
-                class="form-control"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success btn-sm ml-2" type="submit">
-                Search
-              </button>
-            </form>
+            <div class="search">
+              <form class="d-flex">
+                <input
+                  class="form-control"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button class="btn btn-success btn-sm ml-2" type="submit">
+                  Search
+                </button>
+              </form>
+            </div>
           </div>
         </div>
       </nav>
@@ -132,7 +134,7 @@
               {% else %}
               <img
                 src="{% static 'Images/icon-image.png' %}"
-                style="width: 100%"
+                style="width: 100%; height: 150px; object-fit: cover;"
               />
               {% endif %}
             </div>
@@ -251,35 +253,44 @@
       </div>
     </div>
     <!--Footer-->
-    <div class="row footer" style="margin-top: 25px; background-color: #090162; color: white;">
-      <div class="col-lg-4 footer-content">
-        <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
-        <p>The english edition Online News</p>
-        <p>Phone No: 9856234124,014256352</p>
-        <p>taxcompany@gmail.com</p>
-      </div>
-      <div class="col-lg-4 footer-content">
-        <h6>News</h6>
-        <a href="{% url 'politics' %}"><p>Politics</p></a>
-        <a href="{% url 'entertainment' %}"><p>Entertainment</p></a>
-        <a href="{% url 'sports' %}"><p>Sports</p></a>
-        <a href="{% url 'business' %}"><p>Business</p></a>
-      </div>
-      <div class="col-lg-4 footer-content">
-        <h6>You can also find us on</h6>
-        <div style="font-size: 35px; margin-left: 10px">
-          <i class="fa fa-facebook-official"></i>
-          &nbsp;&nbsp;
-          <i class="fa fa-instagram"></i>
-          &nbsp;&nbsp;
-          <i class="fa fa-twitter-square"></i>
+    <div class="footer" style="margin-top: 25px; background-color: #090162; color: white;">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 footer-content">
+            <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
+            <p>The english edition Online News</p>
+            <p>Phone No: 9856234124,014256352</p>
+            <p>taxcompany@gmail.com</p>
+          </div>
+          <div class="col-lg-4 footer-content">
+            <h6>News</h6>
+            <a href="{% url 'politics' %}" style="color: white; text-decoration: none;"><p>Politics</p></a>
+            <a href="{% url 'entertainment' %}" style="color: white; text-decoration: none;"><p>Entertainment</p></a>
+            <a href="{% url 'sports' %}" style="color: white; text-decoration: none;"><p>Sports</p></a>
+            <a href="{% url 'business' %}" style="color: white; text-decoration: none;"><p>Business</p></a>
+          </div>
+          <div class="col-lg-4 footer-content">
+            <h6>You can also find us on</h6>
+            <div style="font-size: 35px; margin-left: 10px">
+              <a href = "https://www.facebook.com/News24nepal.tv" target="_blank">
+                <i class="fa fa-facebook-official" style="color: blue;"></i>
+              </a>
+              &nbsp;&nbsp;
+              <a href="https://www.instagram.com/ekantipur_news/" target="_blank">
+              <i class="fa fa-instagram" style="color:#F56040;;"></i>
+              </a>
+              &nbsp;&nbsp;
+              <a href="twitter.com/rsnpj">
+              <i class="fa fa-twitter-square"  style="color: #405DE6;" target="_blank"></i></a>
+            </div>
+          </div>
+          <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
+          <div style="background-color: #090162; color: white; width: 100%">
+            <p style="text-align: center">
+              Copyright &copy; 2021 Tax Management System, All rights reserved
+            </p>
+          </div>
         </div>
-      </div>
-      <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
-      <div style="background-color: #090162; color: white; width: 100%">
-        <p style="text-align: center">
-          Copyright &copy; 2021 Tax Management System, All rights reserved
-        </p>
       </div>
     </div>
   </body>
