--- a/Backend/login/loginapp/templates/loginapp/Html file/Edit.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Edit.html
@@ -43,7 +43,7 @@
                 </div>
                 <form class="d-flex">
                   <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success btn-sm ml-2" type="submit">Search</button>
+                  <button class="btn btn-success btn-sm ml-2" type="submit">Search</button>
                 </form>
                 <div style="margin-bottom:5px">
                   <!--logout -->
@@ -105,7 +105,7 @@
         
                   <div class="modal-footer text-center">       
                     <button  class="btn btn-success">
-                  Edit
+                      Edit
                   </button>
 
                     <a href="{% url 'dashboard' %}" class="btn btn-info">Cancel</a>
