--- a/Backend/login/loginapp/templates/loginapp/Html file/About.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/About.html
@@ -21,7 +21,68 @@
             <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+            <style>
+              
+                @media (max-width: 1024px){
+                    .building-img {
+                        width: 550px;
+                        height: auto;
+                        overflow: hidden;
+                    
+                    }
+                }
+                @media (max-width: 768px){
+                    .building-img {
+                        width: 690px;
+                        height: auto;
+                        overflow: hidden;
+                    
+                    }
+                    .search{
+                    display: none;
+                }
+                }
+                @media (max-width: 540px){
+                    .building-img {
+                        width: 500px;
+                        height: auto;
+                        overflow: hidden;
+                    
+                    }
+                }
+                @media (max-width: 414px){
+                    .building-img {
+                        width: 350px;
+                        height: auto;
+                        overflow: hidden;
+                    
+                    }
+                }
+                @media (max-width: 360px){
+                    .building-img {
+                        width: 330px;
+                        height: auto;
+                        overflow: hidden;
+                    
+                    }
+                }
+                @media (max-width: 320px){
+                    .building-img {
+                        width: 300px;
+                        height: auto;
+                        overflow: hidden;
+                    
+                    }
+                }
+                @media (max-width: 280px){
+                    .building-img {
+                        width: 200px;
+                        height: auto;
+                        overflow: hidden;
+                    
+                    }
+                }
+            </style>
     </head>
     <body>
         	<!--navigation bar-->
@@ -73,10 +134,19 @@
 					<a href="{% url 'logout' %}" class="nav-link text-white">
 						<button type="button" class="btn btn-primary btn-sm">Logout</button>
 					</a>
-					 <form class="d-flex">
-				        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-				        <button class="btn btn-outline-success btn-sm ml-2" type="submit">Search</button>
-				      </form>
+                    <div class="search">
+                        <form class="d-flex">
+                          <input
+                            class="form-control"
+                            type="search"
+                            placeholder="Search"
+                            aria-label="Search"
+                          />
+                          <button class="btn btn-success btn-sm ml-2" type="submit">
+                            Search
+                          </button>
+                        </form>
+                      </div>
 				</div>
 			</div>
 		</nav>
@@ -117,7 +187,7 @@
                 </p> -->
             </div>
             <div class="col-lg-6">
-                <img src="{% static 'Images/building.jpg' %}" class="building-img mt-5">
+                <img src="{% static 'Images/building.jpg' %}" class="building-img ">
                 <img src="{% static 'Images/building2.jpg' %}" class="building-img mt-5">
             </div>
         </div>
@@ -177,36 +247,45 @@
         </div>
     </div>
      <!--Footer-->
-     <div class="row footer" style="margin-top: 25px; background-color: #090162; color: white;">
-        <div class="col-lg-4 footer-content">
-          <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
-          <p>The english edition Online News</p>
-          <p>Phone No: 9856234124,014256352</p>
-          <p>taxcompany@gmail.com</p>
+        <div class="footer" style="margin-top: 25px; background-color: #090162; color: white;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 footer-content">
+                    <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
+                    <p>The english edition Online News</p>
+                    <p>Phone No: 9856234124,014256352</p>
+                    <p>taxcompany@gmail.com</p>
+                    </div>
+                    <div class="col-lg-4 footer-content">
+                    <h6>News</h6>
+                    <a href="{% url 'politics' %}" style="color: white; text-decoration: none;"><p>Politics</p></a>
+                    <a href="{% url 'entertainment' %}" style="color: white; text-decoration: none;"><p>Entertainment</p></a>
+                    <a href="{% url 'sports' %}" style="color: white; text-decoration: none;"><p>Sports</p></a>
+                    <a href="{% url 'business' %}" style="color: white; text-decoration: none;"><p>Business</p></a>
+                    </div>
+                    <div class="col-lg-4 footer-content">
+                    <h6>You can also find us on</h6>
+                    <div style="font-size: 35px; margin-left: 10px">
+                        <a href = "https://www.facebook.com/News24nepal.tv" target="_blank">
+                            <i class="fa fa-facebook-official" style="color: blue;"></i>
+                          </a>
+                          &nbsp;&nbsp;
+                          <a href="https://www.instagram.com/ekantipur_news/" target="_blank">
+                          <i class="fa fa-instagram" style="color:#F56040;;"></i>
+                          </a>
+                          &nbsp;&nbsp;
+                          <a href="twitter.com/rsnpj">
+                          <i class="fa fa-twitter-square"  style="color: #405DE6;" target="_blank"></i></a>
+                    </div>
+                    </div>
+                    <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
+                    <div style="background-color: #090162; color: white; width: 100%">
+                    <p style="text-align: center">
+                        Copyright &copy; 2021 Tax Management System, All rights reserved
+                    </p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="col-lg-4 footer-content">
-          <h6>News</h6>
-          <a href="{% url 'politics' %}"><p>Politics</p></a>
-          <a href="{% url 'entertainment' %}"><p>Entertainment</p></a>
-          <a href="{% url 'sports' %}"><p>Sports</p></a>
-          <a href="{% url 'business' %}"><p>Business</p></a>
-        </div>
-        <div class="col-lg-4 footer-content">
-          <h6>You can also find us on</h6>
-          <div style="font-size: 35px; margin-left: 10px">
-            <i class="fa fa-facebook-official"></i>
-            &nbsp;&nbsp;
-            <i class="fa fa-instagram"></i>
-            &nbsp;&nbsp;
-            <i class="fa fa-twitter-square"></i>
-          </div>
-        </div>
-        <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
-        <div style="background-color: #090162; color: white; width: 100%">
-          <p style="text-align: center">
-            Copyright &copy; 2021 Tax Management System, All rights reserved
-          </p>
-        </div>
-      </div>
     </body>
 </html>
