--- a/Backend/login/loginapp/templates/loginapp/Html file/Delete.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/Delete.html
@@ -43,7 +43,7 @@
                 </div>
                 <form class="d-flex">
                   <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success btn-sm ml-2" type="submit">Search</button>
+                  <button class="btn btn-success btn-sm ml-2" type="submit">Search</button>
                 </form>
                 <div style="margin-bottom:5px">
                   <!--logout -->
