--- a/Backend/login/loginapp/templates/loginapp/Html file/SignIn.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/SignIn.html
@@ -63,7 +63,7 @@
         /*background: linear-gradient(-45deg,  #EE7752, #E73C7E, #23A605, #23D5AB );;*/
       }
 
-      .row {
+      .row1 {
         background-color: white;
         border-radius: 30px;
         box-shadow: 15px 15px 22px grey;
@@ -100,6 +100,22 @@
       .form-control {
         box-shadow: 3px 3px 5px grey;
       }
+      /*footer css of index.html*/
+        .footer{
+          background-color: #090162; 
+          color: white;
+        }
+
+        .footer-content{
+          margin-top: 20px;
+        }
+
+        .icons{
+          background-color: ghostwhite;
+          border: 1px solid white;
+          border-radius: 50%;
+          font-size: 15px !important;
+        }
     </style>
   </head>
   <body>
@@ -121,7 +137,7 @@
       </div> -->
       <section class="FormCard my-4 mx-5">
         <div class="container">
-          <div class="row no-gutters" style="border: 2px solid #090162">
+          <div class="row row1 no-gutters" style="border: 2px solid #090162">
             <div class="col-lg-7 px-5 pt-5">
               <h6 class="header6 mb-4">Please login to read e-paper</h6>
               <form method="POST" action="">
@@ -188,6 +204,46 @@
           </div>
         </div>
       </section>
+    </div>
+    <div class="footer" style="margin-top: 25px; background-color: #090162; color: white;">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4 footer-content">
+            <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
+            <p>The english edition Online News</p>
+            <p>Phone No: 9856234124,014256352</p>
+            <p>taxcompany@gmail.com</p>
+          </div>
+          <div class="col-lg-4 footer-content">
+            <h6>News</h6>
+            <a href="{% url 'politics' %}" style="color: white; text-decoration: none;"><p>Politics</p></a>
+            <a href="{% url 'entertainment' %}" style="color: white; text-decoration: none;"><p>Entertainment</p></a>
+            <a href="{% url 'sports' %}" style="color: white; text-decoration: none;"><p>Sports</p></a>
+            <a href="{% url 'business' %}" style="color: white; text-decoration: none;"><p>Business</p></a>
+          </div>
+          <div class="col-lg-4 footer-content">
+            <h6>You can also find us on</h6>
+            <div style="font-size: 35px; margin-left: 10px">
+              <a href = "https://www.facebook.com/News24nepal.tv" target="_blank">
+                <i class="fa fa-facebook-official" style="color: blue;"></i>
+              </a>
+              &nbsp;&nbsp;
+              <a href="https://www.instagram.com/ekantipur_news/" target="_blank">
+              <i class="fa fa-instagram" style="color:#F56040;;"></i>
+              </a>
+              &nbsp;&nbsp;
+              <a href="twitter.com/rsnpj">
+              <i class="fa fa-twitter-square"  style="color: #405DE6;" target="_blank"></i></a>
+            </div>
+          </div>
+          <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
+          <div style="background-color: #090162; color: white; width: 100%">
+            <p style="text-align: center">
+              Copyright &copy; 2021 Tax Management System, All rights reserved
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
