--- a/Backend/login/loginapp/templates/loginapp/Html file/TaxHistory.html
+++ b/Backend/login/loginapp/templates/loginapp/Html file/TaxHistory.html
@@ -37,7 +37,7 @@
                 <div class="container">
                     <a href="{% url 'home' %}" class="navbar-brand text-warning font-weight-bold"> 	
                         <img class ="navbar-logo" src = "{% static 'images/logo1.png' %}">
-                    </a>g
+                    </a>
     
                     <button class ="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
                         <span class="navbar-toggler-icon">	
@@ -80,10 +80,12 @@
                         <a href="./SignIn.html" class="nav-link text-white">
                             <button type="button" class="btn btn-primary btn-sm">Sign-in</button>
                         </a>
+                        <div class="search">
                          <form class="d-flex mt-3">
                             <input class="form-control" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success btn-sm ml-2" type="submit">Search</button>
+                            <button class="btn btn-success btn-sm ml-2" type="submit">Search</button>
                           </form>
+                        </div>
                     </div>
                 </div>
             </nav>
@@ -119,34 +121,43 @@
             </div>
         </div>
         <!--Footer-->
-        <div style="overflow: hidden;">
-            <div class="row footer px-3" style="margin-top: 25px;">
-                <div class="col-lg-4 footer-content">
-                    <img src ="{% static 'Image/logo1.png' %}" class="navbar-logo">
+        <div class="footer" style="margin-top: 25px; background-color: #090162; color: white;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 footer-content">
+                    <img src="{% static 'Images/logo1.png' %}" class="navbar-logo" />
                     <p>The english edition Online News</p>
                     <p>Phone No: 9856234124,014256352</p>
                     <p>taxcompany@gmail.com</p>
-                </div>
-                <div class="col-lg-4 footer-content">
-                    <h6>News</h6>
-                    <p>Politics</p>
-                    <p>Entertainment</p>
-                    <p>Sports</p>
-                    <p>Business</p>
-                </div>
-                <div class="col-lg-4 footer-content">
-                    <h6>You can also find us on</h6>
-                    <div style="font-size: 35px; margin-left: 10px;">
-                        <i class="fa fa-facebook-official"></i>
-                        &nbsp;&nbsp;
-                        <i class="fa fa-instagram"></i>
-                        &nbsp;&nbsp;
-                        <i class="fa fa-twitter-square"></i>
                     </div>
-                </div>
-                <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
-                <div style="background-color: #090162; color: white;width: 100%;">
-                    <p style="text-align: center;">Copyright &copy; 2021 Tax Management System, All rights reserved</p>
+                    <div class="col-lg-4 footer-content">
+                    <h6>News</h6>
+                    <a href="{% url 'politics' %}" style="color: white; text-decoration: none;"><p>Politics</p></a>
+                    <a href="{% url 'entertainment' %}" style="color: white; text-decoration: none;"><p>Entertainment</p></a>
+                    <a href="{% url 'sports' %}" style="color: white; text-decoration: none;"><p>Sports</p></a>
+                    <a href="{% url 'business' %}" style="color: white; text-decoration: none;"><p>Business</p></a>
+                    </div>
+                    <div class="col-lg-4 footer-content">
+                    <h6>You can also find us on</h6>
+                    <div style="font-size: 35px; margin-left: 10px">
+                        <a href = "https://www.facebook.com/News24nepal.tv" target="_blank">
+                            <i class="fa fa-facebook-official" style="color: blue;"></i>
+                          </a>
+                          &nbsp;&nbsp;
+                          <a href="https://www.instagram.com/ekantipur_news/" target="_blank">
+                          <i class="fa fa-instagram" style="color:#F56040;;"></i>
+                          </a>
+                          &nbsp;&nbsp;
+                          <a href="twitter.com/rsnpj">
+                          <i class="fa fa-twitter-square"  style="color: #405DE6;" target="_blank"></i></a>
+                    </div>
+                    </div>
+                    <hr class="mb-3" style="background-color: white; border: 1px solid white; width: 100%; margin-left: 0; margin-right: 0;">
+                    <div style="background-color: #090162; color: white; width: 100%">
+                    <p style="text-align: center">
+                        Copyright &copy; 2021 Tax Management System, All rights reserved
+                    </p>
+                    </div>
                 </div>
             </div>
         </div>
